# trace

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README
.github/workflows/: artdaq-develop-cpp-ci.yml  auto_approve.yml  build-single-pkg.yml  test-single-pkg.yml
TRACE/: current.chain  v3_x.version
cmake/: TRACEConfig.cmake.in  TRACEConfigVersion.cmake.in  TRACETargets.cmake.in
doc/: 5in1.txt  RELEASE.NOTES  TRACE-overview-history-slow-v-fast.pptx  TRACE_FILE.txt  bullets.txt  compile_into_kernel.howto  cvs_list_changed_files.sh  cvs_rel_notes.sh  mmap_file_vs_shared_mem.txt  package_files.txt  product_build_with_std.txt  quick-start.txt  tdelta.1  tenv.1  testing.txt  tfreeze.1  tinfo.1  tlayout.txt  tlvlM.1  tlvls.1  tlvlsRestore.1  tlvlsSave.1  tmode.1  todo.txt  toffM.1  tonM.1  trace.1  trace.1p  trace.pptx  traceInit.design.txt  trace_cntl.1  treset.1  tshow.1  users_guide.txt
include/: trace.h  tracelib.h  tracelibmf.hh  tracemf.h  tracemf2.h  tracemf3.h
include/TRACE/: trace.h  traceln.h  tracemf.h  tracemf2.h  tracemf3.h
python/: CMakeLists.txt  TRACE.py  TRACE_tee_subprocess.py  test_trace.py  tracelib.c
rpm/: TRACE.spec  kmodtool-TRACE.sh
script/: CMakeLists.txt  Makefile  big_ex.sh  bitN_to_mask  tcmd.sh  trace-cmd-merge  trace.sh.functions  trace_addr2line  trace_bash  trace_bash_example.sh  trace_build  trace_color  trace_delta  trace_delta.pl  trace_envvars  trace_envvars.sh  trace_feature_test.sh  trace_functions.sh  trace_gnuplot.sh  trace_maxents  trace_rpms_from_repo.sh
spack/: repo.yaml
src_example/: CMakeLists.txt  Makefile
src_example/module/: CMakeLists.txt  Kbuild  Makefile  some_module.c  steve_module.c
src_example/module1/: CMakeLists.txt  Kbuild  Makefile  other_module.c
src_example/userspace/: CMakeLists.txt  Makefile  TLOG.cc  TLOG_ENTEX.cc  TLOG_lower_levels.cc  TLOG_manipulators.cc  TLOG_types.cc  basic_c.c  ex_traceln.cc  ex_traceln.h  example_main.cc  example_sub1.cc  example_sub2.cc  example_sub3.cc  example_sub4.cc  example_sub_.cc  inactive_tlvls.c  just.cc  just_recursive.cc  just_user.cc  msg_test_c.c  no_std.cc  no_trace.cc  pid_test.c  ptr_address_string.cc  setting_lclTime.cc  simple_limit.cc  tlog-compare.cc  trace.c  trace_function.cc  trace_lvl.cc
src_lib/: CMakeLists.txt  Makefile  tracelib.c
src_module/: CMakeLists.txt  Kbuild  Makefile  trace_.c
src_utility/: CMakeLists.txt  Makefile  trace_cntl.c
trace/: Makefile  README
trace/TRACE/: current.chain  v3_1.version  v3_x.version
trace/doc/: 5in1.txt  RELEASE.NOTES  bullets.txt  compile_into_kernel.howto  create_release_notes.txt  cvs_list_changed_files.sh  cvs_rel_notes.sh  functionality.txt  package_files.txt  product_build_with_std.txt  quick-start.txt  todo.txt  trace.pptx  trace_design.docx  trace_design_graphics.pptx  users_guide.txt
trace/include/: trace.h  tracelib.h  tracelibmf.hh
trace/script/: big_ex.sh  bitN_to_mask  trace.sh.functions  trace_delta.pl  trace_envvars.sh  trace_feature_test.sh
trace/src_example/: Makefile
trace/src_example/module/: Kbuild  Makefile  some_module.c  steve_module.c
trace/src_example/module1/: Kbuild  Makefile  other_module.c
trace/src_example/userspace/: Makefile  example_main.cc  example_sub1.cc  example_sub2.cc  example_sub3.cc  example_sub4.cc  just.cc  just_user.cc  no_std.cc
trace/src_lib/: Makefile  tracelib.c
trace/src_module/: Kbuild  Makefile  trace_.c
trace/src_utility/: Makefile  trace_cntl.c
trace/ups/: TRACE.table
ups/: CMakeLists.txt  TRACE.table  TRACE.table.in  cetpkg_variable_report.in  product_deps  setup_deps  setup_for_development
